--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,12 @@
 :root {
   --font-family: 'Manrope', sans-serif;
 
-  --gradient-text: linear-gradient(89.97deg, #AE67FA 1.84%, #F49867 102.67%);
-  --gradient-bar: linear-gradient(103.22deg, #AE67FA -13.86%, #F49867 99.55%);
+  --gradient-text: linear-gradient(89.97deg, #ebdc5d 1.84%, #867901 102.67%);
+  --gradient-bar: linear-gradient(103.22deg, #738a0d -13.86%, #F49867 99.55%);
   
   --color-bg: #040C18;
-  --color-footer : #031B34;
-  --color-blog: #042c54;
-  --color-text: #81AFDD;
-  --color-subtext: #FF8A71;
+  --color-footer : #0e253d;
+  --color-blog: #0c2946;
+  --color-text: #d3d033;
+  --color-subtext: #f3f3f3;
 }
